tests/negative/nested_array_inline_oob_index_assign.far
fun main() -> i64 {
  [[1, 2], [3, 4]][0][2] = 99
  return 0
}
